--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,21 +60,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - images/sam.jpg
-    - images/android.png
-    - images/desktop.png
-    - images/ios2.png
-    - images/web.png
-    - images/dart.png
-    - images/css.png
-    - images/java.png
-    - images/html.png
-    - images/flutter.png
-    - images/ui_ux.png
-    - images/c.png
-    - images/linux.png
-    - images/mysql.png
-
+    - images/Skills/
+    - images/projects/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
